<resources>
    <string name="app_name">Aktivitätsdokumentation</string>
    <string name="action_settings">Settings</string>
    <string name="proband_id">Rohdaten ID</string>
    <string name="start">Start</string>
    <string name="stop">Beenden</string>
    <string name="title_activity_activity_tracker">Aktivitätsdokumentation</string>
    <string name="walking">%1$d Mal  Gehen  %2$d Min</string>
    <string name="walking_backwards">%1$d Mal\n\nRückwärtsgehen\n\n%2$d Min</string>
    <string name="stairs">%1$d Mal\n\nTreppe hinaufsteigen\n\n%2$d Min</string>
    <string name="stairs_down">%1$d Mal\n\nTreppe heruntersteigen\n\n%2$d Min</string>
    <string name="jumping">%1$d Mal\n\nSpringen\n\n%2$d Min</string>
    <string name="standing">%1$d Mal\n\nStehen\n\n%2$d Min</string>
    <string name="sitting">%1$d Mal\n\nSitzen\n\n%2$d Min</string>
    <string name="lying">%1$d Mal\n\nLiegen (Rücken)\n\n%2$d Min</string>
    <string name="lying_side">%1$d Mal\n\nLiegen (Seite)\n\n%2$d Min</string>
    <string name="crouching">%1$d Mal\n\nHocken\n\n%2$d Min</string>
    <string name="turning">%1$d Mal\n\nDrehen\n\n%2$d Min</string>
    <string name="stand_up">%1$d Mal\n\nAufstehen\n\n%2$d Min</string>
    <string name="sit_down">%1$d Mal\n\nHinsetzen\n\n%2$d Min</string>
    <string name="sit_lie">%1$d Mal\n\nSitzen-Liegen\n\n%2$d Min</string>
    <string name="lie_sit">%1$d Mal\n\nLiegen-Sitzen\n\n%2$d Min</string>
    <string name="static_movement">statisch</string>
    <string name="dynamic_movement">dynamisch</string>
    <string name="transition">Transition</string>
    <string name="activity">Aktivität</string>
    <string name="name_activity">Aktivität eingeben</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="no_activity_given">Geben Sie bitte eine Aktivität ein!</string>
    <string name="no_activity_chosen">Zur Zeit ist keine Aktivität ausgewählt</string>
    <string name="back">Löschen</string>
    <string name="measurment">Neue Messung?</string>
    <string name="new_Measurement">Gehören die Label Daten zu einer neuen Messung?</string>
    <string name="title_activity_delete_activities">Löschen</string>
    <string name="backFromDeletion">Zurück</string>
    <string name="delete">Löschen</string>
    <string name="home">Zuhause</string>
    <string name="outside">Draußen</string>
    <string name="inside">Drinnen</string>
    <string name="other">%1$d Mal  Sonstiges  %2$d Min</string>
</resources>
